# wasmCloud

./: .gitignore  Cargo.toml  Dockerfile  PRECOMPILER_IMPLEMENTATION.md  PRECOMPILER_PLAN.md
.github/workflows/: bettyblocks-publish-images.yml  charts.yml  precompile-worker.yml
charts/runtime-operator/: Chart.yaml  values.local.yaml  values.yaml
crates/component-otel/: Cargo.toml
crates/precompile-worker/: Cargo.toml  Dockerfile
crates/precompile-worker/src/: job.rs  main.rs  runner.rs
crates/wash/: Cargo.toml
crates/wash-precompile/: Cargo.toml  Dockerfile  README.md
crates/wash-runtime/: Cargo.toml  build.rs
docs/: precompile.md
examples/cancellable-counter/: .gitignore  README.md  build.sh
examples/sse-component/: Cargo.toml  README.md  test-nats-publish.sh
examples/sse-component/.wash/: config.yaml
examples/sse-component/http-gateway/: Cargo.toml
examples/sse-component/http-gateway/src/: lib.rs
examples/sse-component/manifests/: nats-sse-workloaddeployment.yaml  relay-workloaddeployment.yaml  test-publisher-workloaddeployment.yaml  workloaddeployment.yaml
examples/sse-component/mock-openai/: Cargo.toml
examples/sse-component/mock-openai/src/: main.rs
examples/sse-component/nats-bridge/: Cargo.toml
examples/sse-component/nats-bridge/src/: lib.rs
examples/sse-component/sse-relay/: Cargo.toml
examples/sse-component/sse-relay/src/: lib.rs
examples/sse-component/sse-service/: Cargo.toml
examples/sse-component/sse-service/src/: main.rs
examples/sse-component/test-publisher/: Cargo.toml
examples/sse-component/test-publisher/src/: lib.rs
examples/sse-component/wit/: world.wit
runtime-gateway/: Dockerfile  tracker.go
runtime-operator/: operator.go
(+189 files in other folders)
