[workspace]
resolver = "3"
package.edition = "2024"
members = ["sse-service", "http-gateway", "mock-openai", "sse-relay", "nats-bridge", "test-publisher"]

[workspace.dependencies]
wstd = "0.6"
wit-bindgen = "0.46.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"
strip = true
